--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,4 +23,4 @@ jobs:
           pre-commit run --all-files --show-diff-on-failure
       - name: Test with pytest
         run: |
-          pytest tests
+          pytest --codecov tests
