--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,22 +4,22 @@
 #   pre-commit install-hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
         exclude: '.*\.pth$'
       - id: debug-statements
   - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
   - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 7.0.0
     hooks:
       - id: flake8
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v2.32.1
+  - repo: https://github.com/psf/black
+    rev: 23.12.1
     hooks:
-      - id: pyupgrade
-        args: [ --py36-plus ]
+      - id: black
+        language_version: python3.12
