--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10" ]
+        python-version: [ "3.11", "3.12" ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -21,16 +21,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: '**/requirements-dev.txt'
+          cache-dependency-path: '**/pyproject.toml'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install ".[dev]" && pip uninstall -y pytest-sqlalchemy-mock
       - name: Run pre commit hooks
         run: |
           pre-commit run --all-files --show-diff-on-failure
       - name: Test with pytest
         run: |
-          pytest --cov pytest_sqlalchemy_mock --cov-report=term-missing
+          pytest --cov pytest_sqlalchemy_mock --cov-report=term-missing tests/
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
