--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ description = "pytest sqlalchemy plugin for mock"
 authors = [
     { name="Resul Yurttakalan", email="resulyrt93@gmail.com" },
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 readme = "README.md"
 classifiers = [
     "Framework :: Pytest",
@@ -18,6 +18,8 @@ classifiers = [
     "Topic :: Software Development :: Testing",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
