--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,12 +21,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: '**/pyproject.toml'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[dev]" && pip uninstall -y pytest-sqlalchemy-mock
+          pip install --no-cache-dir ".[dev]"
+          pip uninstall -y pytest-sqlalchemy-mock
       - name: Run pre commit hooks
         run: |
           pre-commit run --all-files --show-diff-on-failure
